operators/mattermost/base/route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mattermost
  namespace: openshift-operators
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: mattermost
    installation.mattermost.com/installation: mattermost-cluster
    installation.mattermost.com/resource: mattermost-cluster
spec:
  subdomain: mattermost
  to:
    kind: Service
    name: mattermost-cluster
  tls:
    termination: edge
  port:
    targetPort: app
